Temp fix to hide the sidebar on mobile.

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -125,3 +125,11 @@
 // Import DS site-specific elements
 @import 'ds-site/_code-examples';
 @import 'ds-site/_code-highlight';
+
+
+#sidebar {
+  @include media-breakpoint-down(sm) {
+
+    display:none;
+  }
+}
